// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Snapshots renders default state correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#1a1a1a",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    No Posts Yet
  </Text>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    Start following people or create your first post to see content in your feed.
  </Text>
</View>
`;

exports[`EmptyState Snapshots renders loading state correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 32,
        "paddingVertical": 64,
      },
      {
        "backgroundColor": "#fafafa",
      },
    ]
  }
  testID="empty-state-loading"
>
  <View
    style={
      {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 32,
        "height": 64,
        "marginBottom": 24,
        "width": 64,
      }
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 24,
          "width": 200,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 16,
          "width": 280,
        },
      ]
    }
  />
</View>
`;

exports[`EmptyState Snapshots renders loading state with action button correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 32,
        "paddingVertical": 64,
      },
      {
        "backgroundColor": "#fafafa",
      },
    ]
  }
  testID="empty-state-loading"
>
  <View
    style={
      {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 32,
        "height": 64,
        "marginBottom": 24,
        "width": 64,
      }
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 24,
          "width": 200,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 16,
          "width": 280,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "borderRadius": 8,
          "height": 44,
          "marginTop": 20,
          "width": 120,
        },
      ]
    }
  />
</View>
`;

exports[`EmptyState Snapshots renders with action button correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#1a1a1a",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    No Posts Yet
  </Text>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    Start following people or create your first post to see content in your feed.
  </Text>
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      {
        "backgroundColor": "#007AFF",
        "borderRadius": 8,
        "minWidth": 120,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      }
    }
    testID="empty-state-action"
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 16,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Create Post
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`EmptyState Snapshots renders with custom testID correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="custom-empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#1a1a1a",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    No Posts Yet
  </Text>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    Start following people or create your first post to see content in your feed.
  </Text>
</View>
`;

exports[`EmptyState Snapshots renders with long title and description correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#1a1a1a",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    Your Investment Portfolio is Currently Empty
  </Text>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    You haven't made any investments yet. Explore our curated pools and start building your diversified cryptocurrency portfolio today. Our expert-managed pools offer various risk levels and investment strategies.
  </Text>
</View>
`;
